--- a/app/src/main/res/layout/activity_send_order.xml
+++ b/app/src/main/res/layout/activity_send_order.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_send_order"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/main_blackground"
+    android:background="@color/zhy_backgroud_1"
     android:orientation="vertical"
     tools:context="com.shian.shianlife.activity.sendorders.SendOrderActivity">
 
@@ -17,23 +17,44 @@
             android:id="@+id/ll_head"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="@dimen/dimen_20dp">
+            android:background="@color/white"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dimen_80dp"
+                android:gravity="center_vertical"
+                android:paddingLeft="@dimen/dimen_32dp"
+                android:paddingRight="@dimen/dimen_32dp"
+                android:text="治丧信息"
+                android:textColor="@color/black_item_shua_textcolor"
+                android:textSize="@dimen/dimen_32dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_1dp"
+                android:background="@color/zhy_line_3" />
 
             <LinearLayout
                 android:id="@+id/ll_head_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"></LinearLayout>
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/dimen_32dp"
+                android:paddingRight="@dimen/dimen_32dp"></LinearLayout>
 
             <Button
                 android:id="@+id/bt_detailes"
-                android:layout_width="@dimen/dimen_200dp"
-                android:layout_height="@dimen/dimen_60dp"
+                android:layout_width="@dimen/dimen_120dp"
+                android:layout_height="@dimen/dimen_50dp"
                 android:layout_gravity="right"
-                android:background="@drawable/ic_home_reg"
+                android:layout_marginBottom="@dimen/dimen_16dp"
+                android:layout_marginRight="@dimen/dimen_32dp"
+                android:layout_marginTop="@dimen/dimen_16dp"
+                android:background="@drawable/zhy_button_state_2"
                 android:text="客户详情"
-                android:textColor="@color/text_color" />
+                android:textColor="@color/zhy_text_color_1"
+                android:textSize="@dimen/dimen_24dp" />
         </LinearLayout>
 
 
@@ -41,24 +62,45 @@
             android:id="@+id/ll_checkbox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_24dp"
+            android:background="@color/white"
             android:orientation="vertical">
 
-            <CheckBox
-                android:id="@+id/cb_allcheck"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="全选" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_80dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/dimen_32dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="服务选项"
+                    android:textColor="@color/black_item_shua_textcolor"
+                    android:textSize="@dimen/dimen_32dp" />
+
+                <com.shian.shianlife.view.writeview.CheckBoxViewNormal
+                    android:id="@+id/cb_allcheck"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"></com.shian.shianlife.view.writeview.CheckBoxViewNormal>
+            </LinearLayout>
+
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_1dp"
-                android:background="@color/gray_item_shua_textcolor" />
+                android:background="@color/zhy_line_3" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/ll_data"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:gravity="right"
             android:orientation="vertical"></LinearLayout>
 
         <LinearLayout
@@ -67,19 +109,20 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dimen_20dp"
             android:layout_marginTop="@dimen/dimen_20dp"
+            android:background="@color/white"
             android:orientation="vertical"></LinearLayout>
 
-        <Button
+        <TextView
             android:id="@+id/bt_submit"
-            android:layout_width="@dimen/dimen_200dp"
-            android:layout_height="@dimen/dimen_60dp"
+            android:layout_width="@dimen/dimen_688dp"
+            android:layout_height="@dimen/dimen_80dp"
             android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/dimen_30dp"
-            android:layout_marginTop="@dimen/dimen_20dp"
-            android:background="@drawable/pgzx_select_1"
+            android:layout_marginBottom="@dimen/dimen_24dp"
+            android:background="@drawable/zhy_button_state_5"
             android:gravity="center"
             android:text="提交保存"
-            android:textColor="@color/text_color"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dimen_24dp"
             android:visibility="gone" />
     </LinearLayout>
 
