--- a/app/src/main/res/layout/layout_sendorder_head_item.xml
+++ b/app/src/main/res/layout/layout_sendorder_head_item.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="@dimen/dimen_60dp"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="@dimen/dimen_60dp"
+        android:layout_weight="1"
+        android:gravity="center_vertical"
+        android:text=""
+        android:textColor="@color/black_item_shua_textcolor"
+        android:textSize="@dimen/dimen_24dp" />
+
     <TextView
-        android:textColor="@color/blackgroundmain"
         android:id="@+id/tv_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="@dimen/dimen_60dp"
+        android:gravity="center_vertical"
+        android:text=""
+        android:textColor="@color/black_item_shua_textcolor"
+        android:textSize="@dimen/dimen_24dp" />
 </LinearLayout>
